  as a concrete example. Check the analyzer module's ``export`` section or online documentation.
  For packet analyzers, the analyzer name is included in the variable name for historical
  reasons. Example:

	redef PacketAnalyzer::VXLAN::vxlan_ports += { 4711/udp };

Changed Functionality
---------------------

Deprecated Functionality
------------------------

Zeek 8.1.0
==========

We'd like to thank Andrew Raffman (@andyraf), @arm7mm, Artyom Kalabukhov (@predator89090),
Benjamin Grap (@blightzero), @biswajitutil, Jean-Samuel Marier (@cccs-jsjm), @chrisjlly,
Craig P (@multicast-bytes), @DigiAngel, Mike Dopheide (@dopheide-esnet), Edoardo Mich
(@edoardomich), @franky-m, Fupeng Zhao (@AmazingPP), Jan Grashöfer (@J-Gras), Klemens
Nanni (@klemens-ya), Klemens Nanni (@klemensn), @kshitiz56, Mark Overholser
(@markoverholser), Mohan Dhawan (@Mohan-Dhawan), Peter Cullen (@pbcullen), RyugaXhypeR
(@RyugaXhypeR), Seth Hall (@sethhall), Yacin Nadji (@ynadji), Zhang Liang (@JosenLiang),
Zach Robinette (@zrobinette12) and @zzzdong for their contributions to this release.

Breaking Changes
----------------

- A standalone ``zeek`` invocation on the command line will now default to running a No-op
  Cluster backend (``Cluster::CLUSTER_BACKEND_NONE``). Previously this defaulted to Broker
  without having any real effect. For a multi-process / cluster deployment of Zeek, a
  cluster backend policy script needs to be loaded explicitly.

  Zeekctl has been updated to use the ZeroMQ cluster backend by default and should require
  no other action. If you encounter issues with ZeroMQ, it is possible to re-enable the
  Broker cluster backend by adding the following entry into ``zeekctl.cfg`` and running
  `zeekctl deploy``:

	ClusterBackend = Broker

  If you manage a non-Zeekctl Zeek setup, load
  ``policy/frameworks/cluster/backend/zeromq`` or
  ``policy/frameworks/cluster/backend/broker``. If you forget to do so, Zeek will