@@ -1,4 +1,4 @@
 ### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
 error in <...>/to_subnet.zeek, line 10: failed converting string to IP prefix (to_subnet(10.0.0.0) and 10.0.0.0)
-error in <...>/to_subnet.zeek, line 12: failed converting string to IP prefix (to_subnet(10.0.0.0/222) and 10.0.0.0/222)
-error in <...>/to_subnet.zeek, line 14: failed converting string to IP prefix (to_subnet(don't work) and don't work)
+error in <...>/to_subnet.zeek, line 18: failed converting string to IP prefix (to_subnet(10.0.0.0/222) and 10.0.0.0/222)
+error in <...>/to_subnet.zeek, line 20: failed converting string to IP prefix (to_subnet(don't work) and don't work)
