@@ -2,5 +2,8 @@
 10.0.0.0/8, T
 2607:f8b0::/32, T
 ::/0, T
+::/1, T
+0.0.0.0/0, T
+0.0.0.0/4, T
 ::/0, T
 ::/0, T
