@@ -9,6 +9,7 @@ IPv6 subnet inequality (PASS)
 IPv6 subnet in operator (PASS)
 IPv6 subnet !in operator (PASS)
 IPv6 subnet type inference (PASS)
+IPv6 subnet equality prefix 1 (PASS)
 IPv4 and IPv6 subnet inequality (PASS)
 IPv4 address and IPv6 subnet (PASS)
 IPv4 in IPv4-mapped-IPv6 subnet (PASS)
